tests/NormalTests/paczka2/big_fuzzy/17662461.err
Error in line 18: wV7HPCNaR S905 -4,6
Error in line 14: wV7HPCNaR S905 83,8
Error in line 20: 0NXL0i7f A358 -1,2
Error in line 19: wV7HPCNaR A358 1,3
Error in line 32: 6a7yBbrtlf S905 57,8
Error in line 42: qPJji A567 42,3
Error in line 61: 21pqWM A358 110,8
Error in line 81: 4NJnSUNff0 A567 77,3
Error in line 86: qPJji A567 91,6
Error in line 91: qPJji A358 34,9
Error in line 77: wV7HPCNaR S905 20,2
Error in line 100: 21pqWM S905 -3,7
Error in line 96: 0NXL0i7f A323 39,7
Error in line 101: S905 A567 24,3
Error in line 99: 21pqWM S905 75,1
Error in line 105: 21pqWM A323 25,0
Error in line 108: 6a7yBbrtlf A358 91,4
Error in line 116: S905 A567 64,5
Error in line 119: wV7HPCNaR A358 42,4
Error in line 120: 4NJnSUNff0 A567 99,3
Error in line 126: 21pqWM A567 46,7
Error in line 131: wV7HPCNaR S905 25,8
Error in line 138: 21pqWM A567 66,8
Error in line 142: 21pqWM S905 86,0
Error in line 155: 0NXL0i7f A358 53,2
Error in line 157: 0NXL0i7f A323 60,6
Error in line 164: 0NXL0i7f A567 -1,5
Error in line 168: wV7HPNaR A358 27,2
Error in line 174: 21*qWM A567 88,7
Error in line 170: 21pqWM S905 52,5
Error in line 177: S905 A358 65,5
Error in line 182: S905 A567 19,1
Error in line 184: 6a7yBbrtlf A323 31,9
Error in line 186: S905 A323 52,8
Error in line 160: 0NXL0i7f A567 7,5
Error in line 192: wV7HPCNaR A358 142,0
Error in line 196: 6a7yBbrtlf A567 77,3
Error in line 199: 6a7yBbrtlf A358 96,6
Error in line 203: 4NJnSUNff0 A323 64,4
Error in line 212: S905 A323 15,4
Error in line 219: 6a7yBbrtlf A567 48,00
Error in line 218: 4NJnSUNff0 A323 28,4
Error in line 221: 4NJnSUNff0 A358 71,5
Error in line 220: 21pqWM A358 6,6
Error in line 229: 21pqWM S905 40,5
Error in line 236: 6a7yBbrtlf A567 41,89
Error in line 234: qPJji A567 77,1
Error in line 237: qPJji S905 85,4
Error in line 244: S905 S905 87,2
